src/main/bkit/parser/.antlr/BKITParser.py
# Generated from /home/pug/Downloads/HK201/Nguyenlynnlaptrinh/assignment2-v1.1/initial/src/main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Body'", "'Break'", "'Continue'", "'Do'", 
                     "'Else'", "'ElseIf'", "'If'", "'EndIf'", "'EndBody'", 
                     "'Parameter'", "'Return'", "'Then'", "'Var'", "'While'", 
                     "'EndWhile'", "'EndDo'", "'For'", "'EndFor'", "'Function'", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'+.'", "'-.'", 
                     "'*'", "'\\'", "'*.'", "'\\.'", "'%'", "'!'", "'&&'", 
                     "'||'", "'=='", "'!='", "'=/='", "'>'", "'<'", "'>.'", 
                     "'<.'", "'>='", "'<='", "'>=.'", "'<=.'", "';'", "'{'", 
                     "'}'", "','", "'='", "'('", "')'", "':'", "'.'", "'['", 
                     "']'" ]

    symbolicNames = [ "<INVALID>", "Body", "Break", "Continue", "Do", "Else", 
                      "ElseIf", "If", "EndIf", "EndBody", "Parameter", "Return", 
                      "Then", "Var", "While", "EndWhile", "EndDo", "For", 
                      "EndFor", "Function", "WS", "ID", "AddInt", "SubInt", 
                      "AddFloat", "SubFloat", "MulInt", "DivInt", "MulFloat", 
                      "DivFloat", "Modulus", "Not", "And", "Or", "Equals", 
                      "NEqualsInt", "NEqualsFloat", "GTInt", "LTInt", "GTFloat", 
                      "LTFloat", "GTEqualsInt", "LTEqualsInt", "GTEqualsFloat", 
                      "LTEqualsFloat", "SM", "LB", "RB", "CM", "EQ", "LP", 
                      "RP", "COLON", "DOT", "LSB", "RSB", "INT", "FLOAT", 
                      "BOOL", "SUBSTRING", "COMMENT", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "UNTERMINATED_COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declList = 1
    RULE_decl = 2
    RULE_var = 3
    RULE_varList = 4
    RULE_funcDec = 5
    RULE_statementList = 6
    RULE_assignment = 7
    RULE_ifState = 8
    RULE_stmtBody = 9
    RULE_forState = 10
    RULE_whileState = 11
    RULE_doWhileState = 12
    RULE_breakState = 13
    RULE_continueState = 14
    RULE_callState = 15
    RULE_returnState = 16
    RULE_funcCall = 17
    RULE_exp1 = 18
    RULE_exp2 = 19
    RULE_exp3 = 20
    RULE_exp4 = 21
    RULE_exp5 = 22
    RULE_exp6 = 23
    RULE_exp7 = 24
    RULE_exp8 = 25
    RULE_indexVar = 26
    RULE_array = 27
    RULE_arrayList = 28
    RULE_typeLit = 29

    ruleNames =  [ "program", "declList", "decl", "var", "varList", "funcDec", 
                   "statementList", "assignment", "ifState", "stmtBody", 
                   "forState", "whileState", "doWhileState", "breakState", 
                   "continueState", "callState", "returnState", "funcCall", 
                   "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", 
                   "exp8", "indexVar", "array", "arrayList", "typeLit" ]

    EOF = Token.EOF
    Body=1
    Break=2
    Continue=3
    Do=4
    Else=5
    ElseIf=6
    If=7
    EndIf=8
    EndBody=9
    Parameter=10
    Return=11
    Then=12
    Var=13
    While=14
    EndWhile=15
    EndDo=16
    For=17
    EndFor=18
    Function=19
    WS=20
    ID=21
    AddInt=22
    SubInt=23
    AddFloat=24
    SubFloat=25
    MulInt=26
    DivInt=27
    MulFloat=28
    DivFloat=29
    Modulus=30
    Not=31
    And=32
    Or=33
    Equals=34
    NEqualsInt=35
    NEqualsFloat=36
    GTInt=37
    LTInt=38
    GTFloat=39
    LTFloat=40
    GTEqualsInt=41
    LTEqualsInt=42
    GTEqualsFloat=43
    LTEqualsFloat=44
    SM=45
    LB=46
    RB=47
    CM=48
    EQ=49
    LP=50
    RP=51
    COLON=52
    DOT=53
    LSB=54
    RSB=55
    INT=56
    FLOAT=57
    BOOL=58
    SUBSTRING=59
    COMMENT=60
    ILLEGAL_ESCAPE=61
    UNCLOSE_STRING=62
    UNTERMINATED_COMMENT=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declList(self):
            return self.getTypedRuleContext(BKITParser.DeclListContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.declList()
            self.state = 61
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(BKITParser.DeclContext,0)


        def declList(self):
            return self.getTypedRuleContext(BKITParser.DeclListContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_declList




    def declList(self):

        localctx = BKITParser.DeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declList)
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.decl()
                self.state = 65
                self.declList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(BKITParser.VarContext,0)


        def funcDec(self):
            return self.getTypedRuleContext(BKITParser.FuncDecContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_decl




    def decl(self):

        localctx = BKITParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.Var]:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.var()
                pass
            elif token in [BKITParser.Function]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.funcDec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Var(self):
            return self.getToken(BKITParser.Var, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def varList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VarListContext)
            else:
                return self.getTypedRuleContext(BKITParser.VarListContext,i)


        def SM(self):
            return self.getToken(BKITParser.SM, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var




    def var(self):

        localctx = BKITParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(BKITParser.Var)
            self.state = 74
            self.match(BKITParser.COLON)
            self.state = 75
            self.varList()
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.CM:
                self.state = 76
                self.match(BKITParser.CM)
                self.state = 77
                self.varList()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            self.match(BKITParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def EQ(self):
            return self.getToken(BKITParser.EQ, 0)

        def typeLit(self):
            return self.getTypedRuleContext(BKITParser.TypeLitContext,0)


        def array(self):
            return self.getTypedRuleContext(BKITParser.ArrayContext,0)


        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT)
            else:
                return self.getToken(BKITParser.INT, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_varList




    def varList(self):

        localctx = BKITParser.VarListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varList)
        self._la = 0 # Token type
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.match(BKITParser.ID)
                self.state = 86
                self.match(BKITParser.EQ)
                self.state = 89
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.INT, BKITParser.FLOAT, BKITParser.BOOL, BKITParser.SUBSTRING]:
                    self.state = 87
                    self.typeLit()
                    pass
                elif token in [BKITParser.LB]:
                    self.state = 88
                    self.array()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.match(BKITParser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.match(BKITParser.ID)
                self.state = 96 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 93
                    self.match(BKITParser.LSB)
                    self.state = 94
                    self.match(BKITParser.INT)
                    self.state = 95
                    self.match(BKITParser.RSB)
                    self.state = 98 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==BKITParser.LSB):
                        break

                self.state = 100
                self.match(BKITParser.EQ)
                self.state = 103
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.INT, BKITParser.FLOAT, BKITParser.BOOL, BKITParser.SUBSTRING]:
                    self.state = 101
                    self.typeLit()
                    pass
                elif token in [BKITParser.LB]:
                    self.state = 102
                    self.array()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Function(self):
            return self.getToken(BKITParser.Function, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def Body(self):
            return self.getToken(BKITParser.Body, 0)

        def EndBody(self):
            return self.getToken(BKITParser.EndBody, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def Parameter(self):
            return self.getToken(BKITParser.Parameter, 0)

        def varList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VarListContext)
            else:
                return self.getTypedRuleContext(BKITParser.VarListContext,i)


        def var(self):
            return self.getTypedRuleContext(BKITParser.VarContext,0)


        def statementList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StatementListContext)
            else:
                return self.getTypedRuleContext(BKITParser.StatementListContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_funcDec




    def funcDec(self):

        localctx = BKITParser.FuncDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(BKITParser.Function)
            self.state = 109
            self.match(BKITParser.COLON)
            self.state = 110
            self.match(BKITParser.ID)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.Parameter:
                self.state = 111
                self.match(BKITParser.Parameter)
                self.state = 112
                self.match(BKITParser.COLON)
                self.state = 113
                self.varList()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.CM:
                    self.state = 114
                    self.match(BKITParser.CM)
                    self.state = 115
                    self.varList()
                    self.state = 120
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 123
            self.match(BKITParser.Body)
            self.state = 124
            self.match(BKITParser.COLON)

            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.Var:
                self.state = 125
                self.var()


            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.Break) | (1 << BKITParser.Continue) | (1 << BKITParser.Do) | (1 << BKITParser.If) | (1 << BKITParser.Return) | (1 << BKITParser.While) | (1 << BKITParser.For) | (1 << BKITParser.ID))) != 0):
                self.state = 128
                self.statementList()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(BKITParser.EndBody)
            self.state = 135
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifState(self):
            return self.getTypedRuleContext(BKITParser.IfStateContext,0)


        def assignment(self):
            return self.getTypedRuleContext(BKITParser.AssignmentContext,0)


        def forState(self):
            return self.getTypedRuleContext(BKITParser.ForStateContext,0)


        def whileState(self):
            return self.getTypedRuleContext(BKITParser.WhileStateContext,0)


        def doWhileState(self):
            return self.getTypedRuleContext(BKITParser.DoWhileStateContext,0)


        def breakState(self):
            return self.getTypedRuleContext(BKITParser.BreakStateContext,0)


        def continueState(self):
            return self.getTypedRuleContext(BKITParser.ContinueStateContext,0)


        def callState(self):
            return self.getTypedRuleContext(BKITParser.CallStateContext,0)


        def returnState(self):
            return self.getTypedRuleContext(BKITParser.ReturnStateContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_statementList




    def statementList(self):

        localctx = BKITParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statementList)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.ifState()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.forState()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 140
                self.whileState()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 141
                self.doWhileState()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 142
                self.breakState()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 143
                self.continueState()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 144
                self.callState()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 145
                self.returnState()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(BKITParser.EQ, 0)

        def exp1(self):
            return self.getTypedRuleContext(BKITParser.Exp1Context,0)


        def SM(self):
            return self.getToken(BKITParser.SM, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def indexVar(self):
            return self.getTypedRuleContext(BKITParser.IndexVarContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_assignment




    def assignment(self):

        localctx = BKITParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 148
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.state = 149
                self.indexVar()
                pass


            self.state = 152
            self.match(BKITParser.EQ)
            self.state = 153
            self.exp1()
            self.state = 154
            self.match(BKITParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def If(self):
            return self.getToken(BKITParser.If, 0)

        def exp1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Exp1Context)
            else:
                return self.getTypedRuleContext(BKITParser.Exp1Context,i)


        def Then(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.Then)
            else:
                return self.getToken(BKITParser.Then, i)

        def stmtBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StmtBodyContext)
            else:
                return self.getTypedRuleContext(BKITParser.StmtBodyContext,i)


        def EndIf(self):
            return self.getToken(BKITParser.EndIf, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def ElseIf(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ElseIf)
            else:
                return self.getToken(BKITParser.ElseIf, i)

        def Else(self):
            return self.getToken(BKITParser.Else, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_ifState




    def ifState(self):

        localctx = BKITParser.IfStateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifState)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(BKITParser.If)
            self.state = 157
            self.exp1()
            self.state = 158
            self.match(BKITParser.Then)
            self.state = 159
            self.stmtBody()
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.ElseIf:
                self.state = 160
                self.match(BKITParser.ElseIf)
                self.state = 161
                self.exp1()
                self.state = 162
                self.match(BKITParser.Then)
                self.state = 163
                self.stmtBody()
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.Else:
                self.state = 170
                self.match(BKITParser.Else)
                self.state = 171
                self.stmtBody()


            self.state = 174
            self.match(BKITParser.EndIf)
            self.state = 175
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(BKITParser.VarContext,0)


        def statementList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StatementListContext)
            else:
                return self.getTypedRuleContext(BKITParser.StatementListContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_stmtBody




    def stmtBody(self):

        localctx = BKITParser.StmtBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmtBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.Var:
                self.state = 177
                self.var()


            self.state = 183
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 180
                    self.statementList() 
                self.state = 185
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def For(self):
            return self.getToken(BKITParser.For, 0)

        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def EQ(self):
            return self.getToken(BKITParser.EQ, 0)

        def exp1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Exp1Context)
            else:
                return self.getTypedRuleContext(BKITParser.Exp1Context,i)


        def exp3(self):
            return self.getTypedRuleContext(BKITParser.Exp3Context,0)


        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def Do(self):
            return self.getToken(BKITParser.Do, 0)

        def stmtBody(self):
            return self.getTypedRuleContext(BKITParser.StmtBodyContext,0)


        def EndFor(self):
            return self.getToken(BKITParser.EndFor, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def indexVar(self):
            return self.getTypedRuleContext(BKITParser.IndexVarContext,0)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_forState




    def forState(self):
